--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -20,7 +20,7 @@
           alt="Google Logo"
         />
         <img src="../assets/dashboard/discord.png" alt="" />
-        <img src="../test/about.jpg" alt="" />
+        <img src="../test/about.jpg" alt="about" />
         <ul>
           <li>Land 100k+ Job</li>
           <li>Finish Frontend Simplified</li>
