--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <a href="https://discord.gg/Frontend" target="_blank">Discord Server</a>
 
-    <a href="../test/dashboard.html">Dashboard</a>
+    <a href="/dashboard.html">Dashboard</a>
 </body>
 </html>
 
