--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
         <b>Bold</b>
     </div>
-    <a href="https://discord.gg/Frontend" target="_blank">Discord Server!</a>
+    <a href="https://discord.gg/Frontend" target="_blank">!Discord Server!</a>
 
     <a href="../test/dashboard.html">Dashboard</a>
 </body>
